# AutoPi

./: .gitignore  .gitmodules  AddToStartup.sh  AlexAuto.py  CMakeLists.txt  Install.sh  OBD.py  README.md  RemoveFromStartup.sh  build.sh  runAuto.sh
AutoPi/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  openauto.h  openauto.hpp
Input/: input.sh  joystick.py
OBD/: OBD.py
Startup/: autoPi.service  flip.sh  flipScreen.sh  unflipScreen.sh
cmake_modules/: Findaasdk.cmake  Findlibomx.cmake  Findopenauto.cmake
include/: obdPacket.hpp
include/App/: Frame.hpp  SettingsCategory.hpp  SettingsManager.hpp  View.hpp  Worker.hpp  bluetooth.hpp  config.hpp  mainwindow.hpp  setting.hpp  shortcuts.hpp  theme.hpp  window.hpp
include/Value/: BoolValue.hpp  IntValue.hpp  StringOption.hpp  StringValue.hpp  ValueBase.hpp  ValueObject.h
include/Views/: obdview.hpp  openAutoView.hpp  openauto.hpp
include/Widgets/: CenterIndicator.hpp  Gauge.hpp  Indicator.hpp  NumberSelector.hpp  Paintable.hpp  StringSelector.hpp
lib/: .gitignore
lib/AutoPi/: CMakeLists.txt
lib/resources/: resources.qrc
lib/resources/stylesheets/: light.qss
lib/scripts/: getBluetoothDevices.py  getBluetoothDevices.sh  getdevices.sh  install  install.sh  installer.sh  python.py
lib/scripts/Input/: input.sh  joystick.py  pythonCheck.sh
lib/scripts/OBD/: OBD.py  connectOBD.sh  obd.sh  obdServer.py
lib/scripts/Startup/: AddToStartup.sh  autoPi.service  autoPiService.py  disableJoystick.sh  enableJoystick.sh  flip.sh  flipScreen.sh  joystickService.py  service.py  sudo  unflip.sh  unflipScreen.sh
src/: autoPi.cpp  dash.cpp  obdPacket.cpp
src/App/: Setting.cpp  SettingManager.cpp  SettingsCategory.cpp  View.cpp  bluetooth.cpp  config.cpp  main.cpp  mainwindow.cpp  shortcuts.cpp  theme.cpp  window.cpp
src/Views/: obdview.cpp  openauto.cpp  openautoview.cpp
src/Widgets/: CenterIndicator  CenterIndicator.cpp  Gauge.cpp  Indicator.cpp  NumberSelector.cpp  StringSelector.cpp
